# 1password-demo

./: .gitignore  PHASE6_IMPLEMENTATION_COMPLETE.md  README.md  vpn.py
archive/: PRD.md
backend/: .coveragerc  .env.example  .gitignore  DASHBOARD_QUICKSTART.md  Makefile  PHASE5_README.md  PHASE5_SUMMARY.md  PHASE6_QUICK_REFERENCE.txt  README.md  docker-compose.yml  pyproject.toml
backend/config/: .gitkeep
backend/demos/: .gitkeep  a2a_demo.py  acp_demo.py  mcp_demo.py
backend/docker/: Dockerfile.a2a  Dockerfile.acp  Dockerfile.mcp
backend/scripts/: .gitkeep  README.md  a2a_server.sh  a2a_server_README.md  acp_server.sh  demo.sh  health-check.sh  mcp_server.sh  run_dashboard.sh  start-all.sh  stop-all.sh  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py
backend/src/: __init__.py
backend/src/a2a/: __init__.py  a2a_server.py  run_a2a.py
backend/src/acp/: __init__.py  acp_server.py  run_acp.py
backend/src/core/: __init__.py  audit_logger.py  credential_manager.py  logging_config.py  metrics.py  onepassword_client.py  token_manager.py
backend/src/mcp/: __init__.py  mcp_server.py  run_mcp.py
backend/src/ui/: README.md  __init__.py  dashboard.py  run_dashboard.py
backend/tests/: __init__.py  conftest.py  test_a2a_server.py  test_acp_server.py  test_audit_logger.py  test_credential_manager.py  test_integration.py  test_mcp_server.py  test_onepassword_client.py  test_token_manager.py
docs/: DEMO_PREPARATION_COMPLETE.md  DEMO_PREPARATION_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  LEARN.md  PHASE6_COMPLETION_SUMMARY.md  PLANNING_SUMMARY.md  PRD-ver-1.0.md  PROJECT_ROADMAP.md  README.md  TODO.md  poc.md  postman_collection.json
frontend/: .gitignore  Dockerfile  app.py  pyproject.toml  start-fe.sh  test_dashboard.py
