[project]
name = "1password-dashboard"
version = "1.0.0"
description = "FastAPI + Tailwind WebSocket Dashboard for 1Password Credential Broker"
authors = [
    {name = "1Password Demo Team", email = "demo@1password.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "onepasswordconnectsdk>=1.5.0",
    "python-jose[cryptography]>=3.3.0",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
]

[project.scripts]
test-dashboard = "test_dashboard:main"

[tool.poetry]
packages = [{include = "app.py", from = "."}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[tool.poetry.group.test.dependencies]
httpx = "^0.27.0"
websockets = "^12.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
